# recolor

./: .gitignore  .gitmodules  .hgignore  .hgtags  CMakeLists.txt  README.md  filesystem.hpp  filesystem.mm  main.cpp  recolor-config.cmake.in  recolor.cpp  recolor.hpp  test-recolor.cpp
app/: CMakeLists.txt  recolor-app.cpp
cmake/: IdeFileStructure.cmake
src/: CMakeLists.txt  recolor.cpp  recolor.hpp
src/app/: filesystem.hpp
src/app/res/: dark_orange.txt  green.txt  green2.txt  green3.txt  green_bright.txt  not_bad.txt  not_bad2.txt  orange.txt  orange_coffee.txt  same.txt
src/test/: CMakeLists.txt
src/tool/: CMakeLists.txt  recolor-tool.cpp
test/: CMakeLists.txt  test-recolor.cpp
tool/: CMakeLists.txt  recolor-tool.cpp
web/: CMakeLists.txt  band.py  build.py  dummy.cpp  jinja2plugin.py  myapp-config  myapp-config.json  myapp.conf  myapp.py  playground.py  playground_async_log.py  playground_thread.py  playground_typing.py  recolor.conf  recolor.py  recolor.sh  recolor_img.py  recolor_server_path.py  recolor_xml.py  recolor_xml_sax.py  server.conf  server.py  yuv.py
web/Playground/: StringGenerator.py  StringGeneratorWebService.py  __init__.py  async.py  index.html  jinja2loader.py  main.py  playground.py
web/Playground/templates/: index.html
web/jinja2_templating/: __init__.py  index.html  jinja2plugin.py  jinja2tool.py
web/jinja2_templating/templates/: abc.html
web/public/: epg.json  hello.html  info.json
web/recolor/: __init__.py  fibo.py  root.conf  stream.py  test.py  util.py
web/recolor/public/: bitcolor.js  dragndrop.js  helper.js  index.html  recolor.js  streaming.html  style.css
web/recolor/public/example/: index.html
web/recolor/templates/: base.html  child.html  index.html  streaming.html
web/website/: config.py  serve.py
web/website/application/: __init__.py  controller.py
web/website/application/public/view/layout/: main.html
web/website/application/public/view/page/: error.html
web/website/application/public/view/page/index/: index.html
web/website/application/public/view/page/news/: list.html  show.html
web/website/application/public/view/page/user/: profile.html
web/website/application/public/view/part/: menu.html
